change main.js path

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script src="http://www.youtubemp3script.com/api/youtubemp3script-v1.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="/script/main.js"></script>
+<script src="./script/main.js"></script>
 <!--<script src="http://www.video2mp3.cc/api/script.js"></script>-->
 </body>
 </html>
