--- a/index.html
+++ b/index.html
@@ -34,5 +34,16 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="./script/main.js"></script>
 <!--<script src="http://www.video2mp3.cc/api/script.js"></script>-->
+
+<script>
+//Google Analytics
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-19743390-8', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
