--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     
-    <title>Youtube 轉 Mp3 下載器</title>   
+    <title>水管下載器</title>   
     
     <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -28,8 +28,8 @@
 
 <div class="form-group" id="form" style="text-align:center;">
     <form role="form" action="">
-        <h3>Youtube 轉 MP3 下載器</h3>
-        <br/>
+        <img src=".\img\icon.png"/>
+        <p></p>
         <div class="form-group has-feedback ">
             <input type="text" id="youtubeURL" class="form-control" value="" placeholder="貼上包含YouTube連結的字串"/>          
             <span class="glyphicon form-control-feedback"></span>
