change mp3 convert service

--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
             <span class="glyphicon form-control-feedback"></span>
         </div>
         
-        <input type="submit" class="btn btn-primary" value="Convert">
+        <input type="submit" class="btn btn-primary" value="Download">
         <input type="button" class="btn btn-primary" id="clean" value="Clean">
     </form>
 </div>
 
-<a href="http://www.yt-mp3.com/" id="ytmp3" onClick="return YoutubeMp3Script(this)">
+<a href="" id="ytmp3"></a>
+
 </a>
 
 
@@ -48,7 +49,7 @@
 <script src="http://www.youtubemp3script.com/api/youtubemp3script-v1.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="./script/main.js?20150531"></script>
+<script src="./script/main.js?20150601"></script>
 
 </body>
 </html>
