--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@
 
 <a href="" id="ytmp3"></a>
 
-</a>
+<br>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Y2MP3 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6914084100751028"
+     data-ad-slot="5951004816"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 <!--http://www.youtubemp3script.com/-->
