--- a/index.html
+++ b/index.html
@@ -35,31 +35,18 @@
             <span class="glyphicon form-control-feedback"></span>
         </div>
         
-        <input type="submit" class="btn btn-primary" value="Download">
+        <input type="submit" class="btn btn-primary" value="Convert">
         <input type="button" class="btn btn-primary" id="clean" value="Clean">
     </form>
 </div>
 
-<a href="" id="ytmp3"></a>
-
-<br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Y2MP3 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6914084100751028"
-     data-ad-slot="5951004816"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
+<a href="http://www.yt-mp3.com/" id="ytmp3" onClick="return YoutubeMp3Script(this)">
 
 <!--http://www.youtubemp3script.com/-->
 <script src="http://www.youtubemp3script.com/api/youtubemp3script-v1.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="./script/main.js?20150601"></script>
+<script src="./script/main.js?20150603"></script>
 
 </body>
 </html>
