--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
 <a href="http://www.yt-mp3.com/" id="ytmp3" onClick="return YoutubeMp3Script(this)">
 
- <!-- Begin BidVertiser code -->
+ <!-- Begin BidVertiser code 
  <center>
 <SCRIPT LANGUAGE="JavaScript1.1" SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=671262&bid=1676486" type="text/javascript">
 </SCRIPT>
 <noscript><a href="http://www.bidvertiser.com/bdv/BidVertiser/bdv_advertiser.dbm">advertising</a></noscript>
-<!-- End BidVertiser code --> 
 </center>
+End BidVertiser code --> 
 
 <!--http://www.youtubemp3script.com/-->
 <script src="http://www.youtubemp3script.com/api/youtubemp3script-v1.js"></script>
