--- a/index.html
+++ b/index.html
@@ -42,14 +42,6 @@
 
 <a href="http://www.yt-mp3.com/" id="ytmp3" onClick="return YoutubeMp3Script(this)">
 
-
-<!--http://www.youtubemp3script.com/-->
-<script src="http://www.youtubemp3script.com/api/youtubemp3script-v1.js"></script>
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="./script/main.js?20150603"></script>
-
-
 <script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
@@ -59,8 +51,13 @@
     document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
 }());
 </script>
-<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+<script type="text/javascript" src="http://cdn.chitika.net/getads.js" async></script>
 
+<!--http://www.youtubemp3script.com/-->
+<script src="http://www.youtubemp3script.com/api/youtubemp3script-v1.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="./script/main.js?20150603"></script>
 
 </body>
 </html>
