--- a/index.html
+++ b/index.html
@@ -42,16 +42,10 @@
 
 <a href="http://www.yt-mp3.com/" id="ytmp3" onClick="return YoutubeMp3Script(this)">
 
-<script type="text/javascript">
-  ( function() {
-    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-    var unit = {"calltype":"async[2]","publisher":"ccjeng","width":550,"height":250,"sid":"Chitika Default"};
-    var placement_id = window.CHITIKA.units.length;
-    window.CHITIKA.units.push(unit);
-    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
-}());
-</script>
-<script type="text/javascript" src="http://cdn.chitika.net/getads.js" async></script>
+<!-- Begin BidVertiser code -->
+<SCRIPT LANGUAGE="JavaScript1.1" SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=671262&bid=1676486" type="text/javascript"></SCRIPT>
+<noscript><a href="http://www.bidvertiser.com/bdv/BidVertiser/bdv_advertiser.dbm">advertising</a></noscript>
+<!-- End BidVertiser code --> 
 
 <!--http://www.youtubemp3script.com/-->
 <script src="http://www.youtubemp3script.com/api/youtubemp3script-v1.js"></script>
